--- a/YouAreFine/Base.lproj/Main.storyboard
+++ b/YouAreFine/Base.lproj/Main.storyboard
@@ -17,60 +17,113 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Everything is Fine." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="brM-lv-i7x">
-                                <rect key="frame" x="57" y="20" width="261" height="82"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Everything is Fine." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="brM-lv-i7x">
+                                <rect key="frame" x="72.5" y="20" width="230" height="62"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="62" id="1h9-IF-W9y"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="27"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="How are you feeling?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CD4-sr-upk">
-                                <rect key="frame" x="83" y="218" width="209" height="58"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g42-Oy-rIK">
-                                <rect key="frame" x="57" y="297" width="70" height="70"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.0" green="0.46274509803921571" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="33"/>
-                                <state key="normal" title="😁">
-                                    <color key="titleColor" red="0.0" green="0.46274509803921571" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HlQ-6z-fUV">
-                                <rect key="frame" x="152" y="298" width="70" height="70"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.0" green="0.46274509803921571" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="33"/>
-                                <state key="normal" title="😬">
-                                    <color key="titleColor" red="0.0" green="0.46274509803921571" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="i6e-nq-Euc">
-                                <rect key="frame" x="248" y="298" width="70" height="70"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.0" green="0.46274509803921571" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="33"/>
-                                <state key="normal" title="😩">
-                                    <color key="titleColor" red="0.0" green="0.46274509803921571" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jDI-Tc-jBQ">
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jDI-Tc-jBQ">
                                 <rect key="frame" x="57" y="399" width="261" height="57"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.0" green="0.46274509800000002" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="261" id="6m4-U4-Pmd"/>
+                                    <constraint firstAttribute="height" constant="57" id="Udr-s2-vWL"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <state key="normal" title="History">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="history" destination="BYZ-38-t0r" eventType="touchUpInside" id="YkV-9m-WwL"/>
+                                </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="n3e-mS-Elj">
+                                <rect key="frame" x="39" y="274" width="297" height="119"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g42-Oy-rIK">
+                                        <rect key="frame" x="18" y="25" width="70" height="70"/>
+                                        <color key="backgroundColor" red="0.0" green="0.46274509803921571" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="33"/>
+                                        <state key="normal" title="😁">
+                                            <color key="titleColor" red="0.0" green="0.46274509803921571" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="happy" destination="BYZ-38-t0r" eventType="touchUpInside" id="lKY-gf-0ti"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HlQ-6z-fUV">
+                                        <rect key="frame" x="113" y="25" width="70" height="70"/>
+                                        <color key="backgroundColor" red="0.0" green="0.46274509803921571" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="70" id="7TF-wO-clT"/>
+                                            <constraint firstAttribute="height" constant="70" id="QVY-6a-vIg"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="33"/>
+                                        <state key="normal" title="😬">
+                                            <color key="titleColor" red="0.0" green="0.46274509803921571" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="medium" destination="BYZ-38-t0r" eventType="touchUpInside" id="1al-F1-IQH"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="i6e-nq-Euc">
+                                        <rect key="frame" x="209" y="25" width="70" height="70"/>
+                                        <color key="backgroundColor" red="0.0" green="0.46274509803921571" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="33"/>
+                                        <state key="normal" title="😩">
+                                            <color key="titleColor" red="0.0" green="0.46274509803921571" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="sad" destination="BYZ-38-t0r" eventType="touchUpInside" id="HdJ-zC-GtU"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="i6e-nq-Euc" firstAttribute="width" secondItem="g42-Oy-rIK" secondAttribute="width" id="Jfe-bo-5W3"/>
+                                    <constraint firstAttribute="height" constant="119" id="PCv-UY-zYx"/>
+                                    <constraint firstItem="g42-Oy-rIK" firstAttribute="centerY" secondItem="n3e-mS-Elj" secondAttribute="centerY" id="b8n-Wz-neA"/>
+                                    <constraint firstItem="g42-Oy-rIK" firstAttribute="leading" secondItem="n3e-mS-Elj" secondAttribute="leading" constant="18" id="cJW-q6-RyK"/>
+                                    <constraint firstItem="i6e-nq-Euc" firstAttribute="centerY" secondItem="n3e-mS-Elj" secondAttribute="centerY" id="lGY-oD-kKj"/>
+                                    <constraint firstItem="HlQ-6z-fUV" firstAttribute="centerY" secondItem="n3e-mS-Elj" secondAttribute="centerY" id="lmI-K8-Yii"/>
+                                    <constraint firstItem="HlQ-6z-fUV" firstAttribute="height" secondItem="g42-Oy-rIK" secondAttribute="height" id="mL6-YB-PhM"/>
+                                    <constraint firstItem="i6e-nq-Euc" firstAttribute="height" secondItem="g42-Oy-rIK" secondAttribute="height" id="nga-AC-pPp"/>
+                                    <constraint firstItem="HlQ-6z-fUV" firstAttribute="centerX" secondItem="n3e-mS-Elj" secondAttribute="centerX" id="pcM-Fb-5le"/>
+                                    <constraint firstAttribute="width" constant="297" id="uW8-Bs-oEJ"/>
+                                    <constraint firstItem="HlQ-6z-fUV" firstAttribute="width" secondItem="g42-Oy-rIK" secondAttribute="width" id="vig-Lh-k7T"/>
+                                    <constraint firstAttribute="trailing" secondItem="i6e-nq-Euc" secondAttribute="trailing" constant="18" id="zMZ-Y0-Os5"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="How are you feeling?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CD4-sr-upk">
+                                <rect key="frame" x="102.5" y="239.5" width="170" height="20.5"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="jDI-Tc-jBQ" firstAttribute="top" secondItem="n3e-mS-Elj" secondAttribute="bottom" constant="6" id="2XS-4j-78h"/>
+                            <constraint firstItem="jDI-Tc-jBQ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="6CA-O2-GHm"/>
+                            <constraint firstItem="n3e-mS-Elj" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="8lK-r1-ayu"/>
+                            <constraint firstItem="n3e-mS-Elj" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="HrZ-m2-LR0"/>
+                            <constraint firstItem="n3e-mS-Elj" firstAttribute="top" secondItem="CD4-sr-upk" secondAttribute="bottom" constant="14" id="O02-rp-fN8"/>
+                            <constraint firstItem="brM-lv-i7x" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="bRO-xf-CNX"/>
+                            <constraint firstItem="brM-lv-i7x" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="feU-9Y-i47"/>
+                            <constraint firstItem="CD4-sr-upk" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="qkU-gi-zP8"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="happyButton" destination="g42-Oy-rIK" id="Xxa-nm-Vm6"/>
+                        <outlet property="historyButton" destination="jDI-Tc-jBQ" id="a1a-TX-6g8"/>
+                        <outlet property="medButton" destination="HlQ-6z-fUV" id="qDt-SI-fJI"/>
+                        <outlet property="midLabel" destination="CD4-sr-upk" id="ts3-Jv-zay"/>
+                        <outlet property="sadButton" destination="i6e-nq-Euc" id="X7i-9p-0tv"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -79,7 +132,7 @@
         <!--Table View Controller-->
         <scene sceneID="vIn-EH-MJM">
             <objects>
-                <tableViewController id="ool-0X-B5V" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="breathe" modalTransitionStyle="crossDissolve" id="ool-0X-B5V" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="0jf-Tq-gqJ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
