--- a/YouAreFine/Base.lproj/Main.storyboard
+++ b/YouAreFine/Base.lproj/Main.storyboard
@@ -103,21 +103,35 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.0" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Everything is going to be okay." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="71i-7q-SUv">
+                                <rect key="frame" x="0.0" y="30" width="375" height="52"/>
+                                <color key="backgroundColor" red="0.0" green="0.46274509800000002" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="52" id="eGP-nl-WKv"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="jDI-Tc-jBQ" firstAttribute="top" secondItem="n3e-mS-Elj" secondAttribute="bottom" constant="6" id="2XS-4j-78h"/>
                             <constraint firstItem="jDI-Tc-jBQ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="6CA-O2-GHm"/>
                             <constraint firstItem="n3e-mS-Elj" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="8lK-r1-ayu"/>
+                            <constraint firstItem="71i-7q-SUv" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="FRH-q7-6As"/>
                             <constraint firstItem="n3e-mS-Elj" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="HrZ-m2-LR0"/>
                             <constraint firstItem="n3e-mS-Elj" firstAttribute="top" secondItem="CD4-sr-upk" secondAttribute="bottom" constant="14" id="O02-rp-fN8"/>
+                            <constraint firstItem="71i-7q-SUv" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="TVd-nq-ukj"/>
                             <constraint firstItem="brM-lv-i7x" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="bRO-xf-CNX"/>
                             <constraint firstItem="brM-lv-i7x" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="feU-9Y-i47"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="71i-7q-SUv" secondAttribute="trailing" id="nGp-7j-aWN"/>
                             <constraint firstItem="CD4-sr-upk" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="qkU-gi-zP8"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="banner" destination="71i-7q-SUv" id="3f8-wW-tAl"/>
                         <outlet property="happyButton" destination="g42-Oy-rIK" id="Xxa-nm-Vm6"/>
                         <outlet property="historyButton" destination="jDI-Tc-jBQ" id="a1a-TX-6g8"/>
                         <outlet property="medButton" destination="HlQ-6z-fUV" id="qDt-SI-fJI"/>
